--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite --port 5500",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clear": "rimraf build"
   },
   "dependencies": {
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.7.0"
+    "react-router-dom": "^6.7.0",
+    "rimraf": "^4.4.0"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
