--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,7 +13,7 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "outDir": "build",
     "jsx": "react-jsx"
   },
   "include": ["src"],
