--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon index.ts",
+    "tsc": "tsc",
+    "start:prod": "node build/index.js",
+    "clear": "rimraf build"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +24,7 @@
     "mongoose": "^7.0.1",
     "nodemon": "^2.0.21",
     "openai": "^3.2.1",
+    "rimraf": "^4.4.0",
     "ts-node": "^10.9.1"
   }
 }
