--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,51 @@
-name: Deploy app
+# Simple workflow for deploying static content to GitHub Pages
+name: Deploy static content to Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches:
-      - main
+    branches: ['main']
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
 
 jobs:
-  build-and-deploy:
+  # Single deploy job since we're just deploying
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Install server dependencies
-      run: npm install
-      working-directory: ./server/
-
-    - name: Build server
-      run: npm run build
-      working-directory: ./server/
-
-    - name: Start server
-      run: npm start
-      working-directory: ./server/
-      background: true
-
-    - name: Install client dependencies
-      run: npm install
-      working-directory: ./client/
-
-    - name: Build client
-      run: npm run build
-      working-directory: ./client/
-
-    - name: Start client
-      run: npm start
-      working-directory: ./client/
-      background: true
-
-    - name: Wait for server and client
-      run: |
-        until $(curl --output /dev/null --silent --head --fail http://localhost:5000) && $(curl --output /dev/null --silent --head --fail http://localhost:3000); do
-          printf '.'
-          sleep 5
-        done
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          # Upload dist repository
+          path: './dist'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
