--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5500",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "clear": "rimraf build"
+    "build": "vite build",
+    "tsc": "tsc",
+    "serve": "vite preview",
+    "clear": "rimraf build && rimraf dist"
   },
   "dependencies": {
     "file-saver": "^2.0.5",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
+    "@types/node": "^18.15.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
