--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,6 +16,6 @@
     "outDir": "build",
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": ["./src", "./*.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
