--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,11 +33,18 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
+          working-directory: ./client/
           node-version: 16.14.0
+          cache: 'npm'
+          cache-dependency-path: "./client/package-lock.json"
       - name: Install dependencies
         run: npm install
+        with:
+          working-directory: ./client/
       - name: Build
         run: npm run build
+        with:
+          working-directory: ./client/
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
