--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "/image-generation-app",
   "scripts": {
     "dev": "vite --port 5500",
     "build": "vite build",
