--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^2.0.21",
     "openai": "^3.2.1",
     "rimraf": "^4.4.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
