--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,11 +38,9 @@ jobs:
           cache: 'npm'
           cache-dependency-path: "./client/package-lock.json"
       - name: Install dependencies
-        run: npm install
-        working-directory: ./client/
+        run: npm ci
       - name: Build
         run: npm run build
-        working-directory: ./client/
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
