--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,8 +38,12 @@ jobs:
           cache: 'npm'
           cache-dependency-path: "./client/package-lock.json"
       - name: Install dependencies
+        with:
+            working-directory: ./client/
         run: npm install
       - name: Build
+        with:
+            working-directory: ./client/
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
